deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wils-deploy
  labels:
    app: wils-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: wils-app
  template:
    metadata:
      labels:
        app: wils-app
    spec:
      containers:
        - name: wils-container
          image: wil42/playground:v2
          ports:
          - containerPort: 8888
